bsd-platform-apis/test-api/test-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: apis
spec:
  selector:
    app: test-api
  ports:
    - name: http
      port: 5100
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
