bsd-platform-apis/test-api/test-api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test-api
        pathType: Prefix
        backend:
          service:
            name: test-api
            port:
              number: 80
